--- a/public/ruelamome/index.html
+++ b/public/ruelamome/index.html
@@ -13,12 +13,12 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
-        <link rel="stylesheet" href="ruelamome/css/main.css">
+        <link rel="stylesheet" href="/ruelamome/css/main.css">
     </head>
 
     <body>
         <div class="container-fluid home-pic-wrapper">
-            <img src="ruelamome/img/ruelamome.jpg" class="img-responsive home-pic">
+            <img src="/ruelamome/img/ruelamome.jpg" class="img-responsive home-pic">
         </div>
 
         <div class="container-fluid wrapper">
@@ -29,7 +29,7 @@
                     Rue la Môme est un spectacle dédié à Edith Piaf, qui revisite ses plus grands succès mais aussi certains trésors méconnus. Ce trio de musiciens professionnels et talenteux, portés par l'étonnante Cindy au chant, vous fera revivre différentes périodes de la vie de La Môme, de ses débuts dans la rue à la consécration à l'Olympia. L'accordéon et le violon font place égale dans le spectacle, la guitare change de main et le piano s'invite sur certain morceaux toujours pour subjuguer une incroyable voix. L'imitation n'est pas cherchée, mais le décor est là sans aucun doute ; installez vous confortablement, et laissez vous embarquer pour un retour dans le temps !
                 </p>
 
-                <img class="img-thumb-center" src="ruelamome/img/ruelamome2.jpg" alt="Le groupe au complet">
+                <img class="img-thumb-center" src="/ruelamome/img/ruelamome2.jpg" alt="Le groupe au complet">
 
                 <h2 class="text-center">Un répertoire complet</h2>
 
@@ -50,7 +50,7 @@
                     Grâce à la collaboration avec Anthony Berrot, collectionneur reconnu, vous pourrez découvrir au cours de la soirée des <strong>images inédites</strong> de La Môme, projetées en fond de scène. Des <strong>enregistrements inédits</strong> viendront également ponctuer les chansons, Piaf s'invite elle-même dans le spectacle qui lui rend hommage..!
                 </p>
 
-                <img class="img-thumb-center thumb--landscape" src="ruelamome/img/marseille.jpg" alt="Le groupe avec Anthony Berrot, à Marseille">
+                <img class="img-thumb-center thumb--landscape" src="/ruelamome/img/marseille.jpg" alt="Le groupe avec Anthony Berrot, à Marseille">
 
                 <h2 class="text-center">Les artistes</h2>
 
@@ -61,7 +61,7 @@
                             <small>Chant</small>
                         </h3>
 
-                        <img class="team-img" alt="Cindy MARQUIS" src="ruelamome/img/cid.jpg">
+                        <img class="team-img" alt="Cindy MARQUIS" src="/ruelamome/img/cid.jpg">
 
                         <p class="team-txt">
                             Je sais pas quoi mettre alors pour l'instant j'ai rien mis...!
@@ -74,7 +74,7 @@
                             <small>Accordéon, Piano</small>
                         </h3>
 
-                        <img class="team-img" alt="Jérémy DUTHEIL" src="ruelamome/img/jeremy.jpg">
+                        <img class="team-img" alt="Jérémy DUTHEIL" src="/ruelamome/img/jeremy.jpg">
 
                         <p class="text-center">
                             <a href="https://www.facebook.com/jeremydutheilaccordeoniste/" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -93,7 +93,7 @@
                             <small>Violon, Guitare</small>
                         </h3>
 
-                        <img class="team-img" alt="Kristens Manni" src="ruelamome/img/kris.jpg">
+                        <img class="team-img" alt="Kristens Manni" src="/ruelamome/img/kris.jpg">
 
                         <p class="team-txt">
                             Je sais pas quoi mettre non plus pour l'instant =D
